[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentprobe"
version = "0.1.0"
description = "AI Agent Prompt Injection Red-Teaming Tool"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.25.0",
]

[project.scripts]
agentprobe = "agentprobe.cli:main"
